# Mobile_robot_lane_following-

./: command.md
raspberry_ws/: requirements.txt
raspberry_ws/src/robot_bridge/: package.xml  setup.py
raspberry_ws/src/robot_bridge/robot_bridge/: motor_control.py  read_send_image.py
raspberry_ws/src/type_msg/: CMakeLists.txt  package.xml
raspberry_ws/src/type_msg/msg/: SignalControl.msg
workspace/: requirements.txt
workspace/install/: local_setup.sh  setup.sh
workspace/install/file_launch/share/file_launch/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/lane_following/lib/lane_following/: lane_detection
workspace/install/lane_following/share/lane_following/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/install/obstacle_detection/lib/obstacle_detection/: obstacle_detection
workspace/install/obstacle_detection/share/obstacle_detection/: package.sh  package.xml
workspace/log/: latest_build
workspace/src/file_launch/: CMakeLists.txt  package.xml
workspace/src/file_launch/launch/: calculation_n.py
workspace/src/lane_following/: setup.py
workspace/src/lane_following/lane_following/: lane_detection.py
workspace/src/obstacle_detection/: setup.py
workspace/src/obstacle_detection/obstacle_detection/: obstacle_detection.py
workspace/src/raspberry_brigde/: setup.cfg  setup.py
workspace/src/raspberry_brigde/raspberry_brigde/: PID.py  send_signal_control.py
workspace/src/type_msg/: CMakeLists.txt
workspace/src/type_msg/msg/: OffsetAngle.msg
(+49 files in other folders)
