<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>file_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyendat2004xtc@gmail.com">nguyendat</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>raspberry_brigde</depend>
  <depend>lane_following</depend>
  <depend>obstacle_detection</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
